@@ -1275,8 +1275,8 @@ sub OutputFunction {
     my $id = &CreateValidSGMLID ($symbol);
     my $condition = &MakeConditionDescription ($symbol);
 
-    # Take out the return type
-    $declaration =~ s/<RETURNS>\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+|struct\s+|enum\s+)*)(\w+)\s*(\**\s*(const|G_CONST_RETURN)?\s*\**\s*(restrict)?\s*)<\/RETURNS>\n//;
+    # Take out the return type     $1                                                           $3   $4
+    $declaration =~ s/<RETURNS>\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+|struct\s+|enum\s+)*)(\w+)(\s*\**\s*(const|G_CONST_RETURN)?\s*\**\s*(restrict)?\s*)<\/RETURNS>\n//;
     my $type_modifier = defined($1) ? $1 : "";
     my $type = $3;
     my $pointer = $4;
@@ -1290,6 +1290,7 @@ sub OutputFunction {
     # We output const rather than G_CONST_RETURN.
     $type_modifier =~ s/G_CONST_RETURN/const/g;
     $pointer =~ s/G_CONST_RETURN/const/g;
+    $pointer =~ s/^\s+/ /g;
 
     my $ret_type_len = length ($start) + length ($type_modifier)
 	+ length ($pointer) + length ($type);
